<resources>
    <string name="btnRegister">Register</string>
    <string name="btnBuy">Buy</string>
    <string name="btnKey">License</string>
    <string name="btnConfirm">Confirm</string>
    <string name="btnCancel">Cancel</string>
    <string name="menuPurchase">Purchase</string>
    <string name="msgBilInApp">The trial version has expired, Please buy to continue using.</string>
    <string name="msgPurchaseSucc">Thank you to support us.</string>
    <string name="msgPurchaseFail">Purchase fail, check Google Purchase.</string>
    <string name="dlgTitleRegistration">App Registration</string>
    <string name="dlgTitleRegisted">Registed</string>
    <string name="msgExpire">"App Serial ID: %s 
The trial version has expired. Please purchase or register license key to continue using this app."</string>
    <string name="msgExpireWithoutTrial">Please buy and register license key to us this app.</string>
    <string name="dlgTitleRegistrationTry">Wrong license, try again</string>
    <string name="registerContent">"To register the app with your device, enter license key .
To buy the pay version, click buy to pay version link. 
To order a license key, send email to us with serial ID %s."</string>
    <string name="serialNumber">Serial ID:</string>
    <string name="msgRemindDays">Trial Version: %s days reminding</string>
    <string name="dlgTitleExpire">Had been expired!</string>
    <string name="errorKey">Invalid license key</string>
    <string name="registedContent">Thank you to buy and registed the app. Your serial ID %s is registered with the following license key.</string>
    <string name="emailOrderSubject">Purchase register code</string>
    <string name="emailOrderContent">I want to purchase the register code. Here is my serial ID %s.</string>
    <string name="dlgTitleRegisterError">Register failed. Exit the application.</string>
    <string name="msgInvalidKey">Invalid license key. Please try again.</string>
    <string name="serialCodeContent">Your device serial ID is %s, please enter license key to register the app with your device.</string>
    <string name="msgRegister">Please buy and register the app.</string>
    <string name="registrationUrl">www.androidappshk.com</string>
    <string name="payUrl">details?id=com.aadhk.restpos.pay</string>
    <string name="lbRegister">Register</string>
    <string name="companyEmail">androidapplicationhk@gmail.com</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>
    <string name="skip_button_label">Skip</string>
    <string name="titleData">Database</string>
    <string name="titleSetting">Setting</string>
    <string name="dlgTitleDate">Choose date</string>
    <string name="dlgTitleTime">Choose time</string>
    <string name="dlgTitleDatePeriod">Choose date range</string>
    <string name="lbTo">To</string>
    <string name="titleLicenseExpire">%s is unlicensed, go to Google Play to purchase.</string>
    <string name="btnOk">OK</string>
    <string name="btnRate">Rate</string>
    <string name="btnClear">Clear</string>
    <string name="btnEmail">Email</string>
    <string name="btnDelete">Delete</string>
    <string name="btnSave">Save</string>
    <string name="btnBack">Back</string>
    <string name="btnClose">Close</string>
    <string name="btnReset">Reset</string>
    <string name="btnMore">More</string>
    <string name="app_name">W&amp;O POS</string>
    <string name="companyUrl">http://www.androidappshk.com</string>
    <string name="msgShare">"Check out W&amp;O POS!

 https://play.google.com/store/apps/details?id=com.aadhk.restpos"</string>
    <string name="menuUpgrade">Purchase</string>
    <string name="titleUpgrade">Purchase</string>
    <string name="pleasePurchase">Please purchase!</string>
    <string name="msgIAStartFail">In-app billing is not supported by your device</string>
    <string name="prefAutoBackupTitle">Auto Backup DB to SD Card</string>
    <string name="prefAutoBackupSummary">Auto backup database to SD card before exit app</string>
    <string name="prefAutoBackupDropBoxTitle">Auto Backup DB to Dropbox™</string>
    <string name="prefAutoBackupDropBoxSummary">Auto backup database to Dropbox™ before exit app</string>
    <string name="prefLangTitle">Languages</string>
    <string name="prefTitleDate">Date Format</string>
    <string name="prefTitleTime">Time Format</string>
    <string name="prefSummaryOnTime">Use 24 hour format</string>
    <string name="prefSummaryOffTime">Use AM/PM format</string>
    <string name="prefTranslatorTitle">Translators</string>
    <string name="prefTranslatorSummary">Not your language, email to help us</string>
    <string name="prefRegisterTitle">Register</string>
    <string name="prefLogTitle">Change Log</string>
    <string name="prefLogSummary">v%1$s</string>
    <string name="appInfo">App info</string>
    <string name="titleDelivery">Delivery</string>
    <string name="lbDelivery">Delivery</string>
    <string name="titleReservation">Reservation</string>
    <string name="titleAddNote">Add Note</string>
    <string name="dlgTitleServiceFree">Service Fee</string>
    <string name="lbDineIn">Dine In</string>
    <string name="prefSummaryServiceFree">Service Fee</string>
    <string name="lbServiceFee">Service Fee</string>
    <string name="titleCashDrawer">Drawer</string>
    <string name="menuAbout">About</string>
    <string name="menuSearch">Search</string>
    <string name="menuDeleteAll">Delete all</string>
    <string name="menuImport">Import</string>
    <string name="menuExport">Export</string>
    <string name="menuPersonNum">Guests</string>
    <string name="menuOrdering">Item</string>
    <string name="menuVoidOrder">Void Order</string>
    <string name="menuPrintOrder">Print</string>
    <string name="menuSplit">Split bill</string>
    <string name="menuTransferOrder">Transfer order</string>
    <string name="prefPrintVoidOrderItem">Print Void Order Item</string>
    <string name="prefPrintVoidOrderItemOff">"Don't auto print when void order item"</string>
    <string name="prefPrintVoidOrderItemOn">Auto print when void order item</string>
    <string name="prefShowVoidOrderItem">Show Void Order Item</string>
    <string name="prefShowVoidOrderItemOff">"Don't show void order item on receipt"</string>
    <string name="prefShowVoidOrderItemOn">Show void order item on receipt</string>
    <string name="prefReceiptItemSort">Sort item in receipt</string>
    <string name="prefReceiptItemSortOff">Sort item by time</string>
    <string name="prefReceiptItemSortOn">Sort item by name</string>
    <string name="prefRememberPassword">Login</string>
    <string name="prefRememberPasswordOff">Do not remember password</string>
    <string name="prefRememberPasswordOn">Remember password</string>
    <string name="prefTableGroupTitle">Table group</string>
    <string name="prefTableGroupSummary">Add/delete/update table group</string>
    <string name="lbPerSign">%</string>
    <string name="kitchenRemark">Remark</string>
    <string name="lbName">Name</string>
    <string name="prefItemFontSize">Item Font Size</string>
    <string name="prefPrinterCashierTitle">Receipt Printer</string>
    <string name="prefPrinterKitchenTitle">Kitchen Printer</string>
    <string name="prefPrinterKitchen2Title">Second Kitchen Printer</string>
    <string name="prefPrinterBarTitle">Bar Printer</string>
    <string name="prefPrinterBarSummary">Setup bar printer</string>
    <string name="prefProfileTitle">Restaurant</string>
    <string name="prefTaxTitle">Tax</string>
    <string name="prefTaxSummary">Setup tax</string>
    <string name="prefTableDefalutPersonTitle">Default number of guests</string>
    <string name="prefOrderNumTitle">Order Number</string>
    <string name="prefOrderingOption">Action After Sending Order</string>
    <string name="prefOrderingOn">Go to table</string>
    <string name="prefOrderingOff">Keep on ordering</string>
    <string name="prefCategoryStyleTitle">Order Category Preference</string>
    <string name="prefCategoryNewStyleOn">Use button</string>
    <string name="prefCategoryOldStyleOff">Use sliding</string>
    <string name="prefProfileSummary">Set restaurant data</string>
    <string name="prefTableTitle">Table</string>
    <string name="prefTableSummary">Import/add/delete/update table</string>
    <string name="prefPriceTitle">Price Schedule</string>
    <string name="prefPriceSummary">Setup schedule to change the price</string>
    <string name="prefCategoryTitle">Category</string>
    <string name="prefCategorySummary">Import/add/delete/update category</string>
    <string name="prefItemTitle">Item</string>
    <string name="prefItemSummary">Import/add/delete/update item</string>
    <string name="prefModifierTitle">Modifier</string>
    <string name="prefModifierSummary">Import/add/delete/update Modifier</string>
    <string name="lbProfile">Restaurant</string>
    <string name="lbPrinter">Printer</string>
    <string name="lbPersonal">Personal</string>
    <string name="prefPaymentTitle">Payment Method</string>
    <string name="prefUpdateDeleteAddSummary">Add/delete/update payment type</string>
    <string name="prefDiscountTitle">Discount</string>
    <string name="prefDiscountSummary">Add/delete/update discount</string>
    <string name="prefKitchenNoteTitle">Kitchen Note</string>
    <string name="prefKitchenNoteSummary">Add/delete/update kitchen note</string>
    <string name="prefVoidReasonTitle">Void Reason</string>
    <string name="prefVoidReasonSummary">Add/delete/update void reason</string>
    <string name="btnDiscount">Discount</string>
    <string name="btnGratuity">Gratuity</string>
    <string name="lbNote">Note</string>
    <string name="customer">Customer</string>
    <string name="prefCustomerTitle">Customer</string>
    <string name="prefCustomerSummary">Add/delete/update customer</string>
    <string name="prefUserTitle">Employee</string>
    <string name="prefUserSummary">Add/delete/update employee</string>
    <string name="prefUserPermissionTitle">Role Permission</string>
    <string name="prefUserPermissionSummary">Assign permissions to waiter or cashier</string>
    <string name="psStartDate">Start Date</string>
    <string name="psEndDate">End Date</string>
    <string name="psStartTime">Start Time</string>
    <string name="psEndTime">End Time</string>
    <string name="psEnable">Enable</string>
    <string name="lbPercentage">Percentage</string>
    <string name="lbAmount">Amount</string>
    <string name="psChooseItem">Choose Items</string>
    <string name="psHintDisAmt">Discount amount</string>
    <string name="txtPriceSchedule">The price schedule only work on same day. If the end time is in next day, you need to create another schedule.</string>
    <string name="lbTakeout">Takeout</string>
    <string name="lbHelp">Help</string>
    <string name="titleOrderlist">Orders</string>
    <string name="menuTax">Tax</string>
</resources>