<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_kitchenRemark" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/kitchenRemark" android:shadowColor="@*android:color/white" android:layout_weight="1.0" style="@style/buttonLime" />
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_void" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/actionbar_layout_Left" android:text="@string/menuVoidOrder" android:layout_weight="1.0" style="@style/buttonTeal" />
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_split" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/actionbar_layout_Left" android:text="@string/menuSplit" android:layout_weight="1.0" style="@style/buttonMenuRed" />
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_item" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/actionbar_layout_Left" android:text="@string/menuOrdering" android:layout_weight="1.0" style="@style/buttonDeepPurple" />
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_transfer" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/actionbar_layout_Left" android:text="@string/menuTransferOrder" android:layout_weight="1.0" style="@style/buttonMenuGreen" />
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_print_order" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/actionbar_layout_Left" android:text="@string/menuPrintOrder" android:layout_weight="1.0" style="@style/buttonPurple" />
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_personNum" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/actionbar_layout_Left" android:text="@string/menuPersonNum" android:layout_weight="1.0" style="@style/buttonYellow" />
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_search" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/actionbar_layout_Left" android:text="@string/menuSearch" android:layout_weight="1.0" style="@style/buttonLightBlue" />
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_more" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/actionbar_layout_Left" android:text="@string/btnMore" android:layout_weight="1.0" style="@style/buttonLightBlue" />
</merge>