<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_serverfee" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/lbServiceFee" android:layout_weight="1.0" style="@style/buttonYellow" />
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_gratuity" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/actionbar_layout_Left" android:text="@string/btnGratuity" android:layout_weight="1.0" style="@style/buttonPurple" />
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_tax" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/actionbar_layout_Left" android:text="@string/menuTax" android:layout_weight="1.0" style="@style/buttonTeal" />
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_discount" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/actionbar_layout_Left" android:text="@string/btnDiscount" android:layout_weight="1.0" style="@style/buttonMenuRed" />
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_member" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/actionbar_layout_Left" android:text="@string/customer" android:layout_weight="1.0" style="@style/buttonTeal" />
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_addNote" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/actionbar_layout_Left" android:text="@string/lbNote" android:singleLine="true" android:layout_weight="1.0" style="@style/buttonDeepPurple" />
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_email" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/actionbar_layout_Left" android:text="@string/btnEmail" android:singleLine="true" android:layout_weight="1.0" style="@style/buttonMenuGreen" />
    <Button android:textSize="16.0dip" android:ellipsize="end" android:id="@id/menu_more" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/actionbar_layout_Left" android:text="@string/btnMore" android:layout_weight="1.0" style="@style/buttonLightBlue" />
</merge>